<resources>
    <string name="app_name">PracticaTTA</string>
    <string name="login">Alumno de TTA</string>
    <string name="evaluacion">Evaluación TTA</string>
    <string name="nuevotest">Nuevo Test</string>
    <string name="nuevoeje">Nuevo Ejercicio</string>

    <string name="incorrecto">¡Has fallado!</string>
    <string name="correcto">¡Correcto!</string>
    <string name="no_camera">Camara necesaria para ejecutar esta función</string>
    <string name="no_app">Instale una aplicación que pueda usar la camara</string>
    <string name="no_api">Esta versión de Android no soporta esta caracteristica</string>
    <string name="name_file">Nombre fichero: </string>
    <string name="size_file">Tamaño fichero: </string>

            <string name="bienvenida">Bienvenido </string>
            <string name="leccion1">Leccion 1: Introducción a Android</string>
            <string name="enunciado">blablabla</string>

    <string name="usuario">Usuario:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="Iusuario">Introduce usuario</string>
    <string name="Icontrasena">Introduce contraseña</string>


    <string name="bacceder">ACCEDER</string>
    <string name="bnuevotest">NUEVO TEST</string>
    <string name="bnuevoeje">NUEVO EJERCICIO</string>
    <string name="bseguimiento">SEGUIMIENTO</string>
    <string name="benviar">ENVIAR</string>
    <string name="bayuda">VER AYUDA</string>
    <string name="bsubir">SUBIR FICHERO</string>
    <string name="bfoto">SACAR FOTO</string>
    <string name="bgrabar_audio">GRABAR AUDIO</string>
    <string name="bgrabar_video">GRABAR VIDEO</string>

</resources>
