<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nuevo_ejercicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="practicatta.eus.ehu.tta.intel.practicatta.NuevoEjercicio">

    <TextView
        android:id="@+id/ejercicio_enunciado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/subir_fichero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsubir"
        android:onClick="subirFichero"/>

    <Button
        android:id="@+id/sacar_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bfoto"
        android:onClick="sacarFoto"/>

    <Button
        android:id="@+id/grabar_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bgrabar_audio"
        android:onClick="grabarAudio"/>

    <Button
        android:id="@+id/grabar_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bgrabar_video"
        android:onClick="grabarVideo"/>
</LinearLayout>
